# bit-casino-slots-ms

./: Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: build.yaml
src/: failure.rs  handlers.rs  machines.rs  main.rs  requests.rs  router.rs
src/handlers/: byte_builder.rs  helper.rs  responses.rs
src/machines/: byte_builder.rs
src/machines/byte_builder/: binary_byte.rs
src/requests/: currency.rs  player.rs
